--- a/instat/My Project/Resources.resx
+++ b/instat/My Project/Resources.resx
@@ -541,4 +541,7 @@
   <data name="Within" xml:space="preserve">
     <value>Within</value>
   </data>
+  <data name="To_Script" xml:space="preserve">
+    <value>To Script</value>
+  </data>
 </root>
