--- a/instat/My Project/Resources.fr-FR.resx
+++ b/instat/My Project/Resources.fr-FR.resx
@@ -435,4 +435,7 @@
   <data name="Dry_Spell1" xml:space="preserve">
     <value>Période de sécheresse</value>
   </data>
+  <data name="To_Script" xml:space="preserve">
+    <value>Au Script</value>
+  </data>
 </root>
