--- a/instat/MultilingualResources/instat.fr-FR.xlf
+++ b/instat/MultilingualResources/instat.fr-FR.xlf
@@ -892,6 +892,14 @@
           <source>To Script</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Au Script</target>
         </trans-unit>
+        <trans-unit id="Ascending" translate="yes" xml:space="preserve">
+          <source>Ascending</source>
+          <target state="new">Ascending</target>
+        </trans-unit>
+        <trans-unit id="Descending" translate="yes" xml:space="preserve">
+          <source>Descending</source>
+          <target state="new">Descending</target>
+        </trans-unit>
       </group>
     </body>
   </file>
