--- a/instat/My Project/Resources.resx
+++ b/instat/My Project/Resources.resx
@@ -544,4 +544,10 @@
   <data name="To_Script" xml:space="preserve">
     <value>To Script</value>
   </data>
+  <data name="Ascending" xml:space="preserve">
+    <value>Ascending</value>
+  </data>
+  <data name="Descending" xml:space="preserve">
+    <value>Descending</value>
+  </data>
 </root>
