--- a/instat/MultilingualResources/instat.fr-FR.xlf
+++ b/instat/MultilingualResources/instat.fr-FR.xlf
@@ -1036,4 +1036,12 @@
       <group id="INSTAT/DLGHISTOGRAM.RESX" datatype="resx" />
     </body>
   </file>
+  <file datatype="xml" source-language="en-US" target-language="fr-FR" original="INSTAT/DLGSTEMANDLEAF.RESX" tool-id="MultilingualAppToolkit" product-name="n/a" product-version="n/a" build-num="n/a">
+    <header>
+      <tool tool-id="MultilingualAppToolkit" tool-name="Multilingual App Toolkit" tool-version="4.0.1466.0" tool-company="Microsoft" />
+    </header>
+    <body>
+      <group id="INSTAT/DLGSTEMANDLEAF.RESX" datatype="resx" />
+    </body>
+  </file>
 </xliff>
